# nya

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  README.md  default.nix  flake.nix  shell.nix
.github/scripts/: get-helpers.sh
.github/workflows/: ci.yml  cmake.yml  format.yml  make.yml  nix.yml
helpers/: buffer.c  buffer.h  vector.c  vector.h
include/: compiler.h
includes/: compiler.h  cprocess.h
src/: compiler.c  cprocess.c  lex_process.c  lexer.c  main.c
test/: number.c  simple.c
